[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
colored = "2.1.0"
colour = "0.6.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
dialoguer = "0.11.0"
